fixed archive and logo overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,6 +240,10 @@ h1 {
   line-height: 1.5;
 }
 
+.archive-page {
+  padding-bottom: 180px
+}
+
 @media (max-width: 700px) {
   header {
     display: block;
